fixed navigation issue on mobile, started to format mobile site a bit more.

--- a/css/about.css
+++ b/css/about.css
@@ -89,7 +89,6 @@ audio,
 video {
   margin: 0;
   padding: 0;
-  border: 1px solid red;
   font-size: 100%;
   font: inherit;
   vertical-align: baseline;
@@ -145,6 +144,7 @@ header {
     justify-content: center;
     align-items: center;
     height: 300px;
+    position: static;
   }
 }
 header h1 {
@@ -196,7 +196,7 @@ header nav a:hover {
 }
 @media (max-width: 500px) {
   .team {
-    margin-top: 300px;
+    margin-top: 0px;
   }
 }
 .team .member {
