--- a/less/about-style.less
+++ b/less/about-style.less
@@ -12,6 +12,7 @@ header {
         justify-content: center;
         align-items: center;
         height: 300px;
+        position: static;
     }
 
     h1 {
@@ -64,7 +65,7 @@ header {
     justify-content: center;
 
     @media (max-width: 500px) {
-        margin-top: 300px;
+        margin-top: 0px;
     }
 }
 
