--- a/less/marketing-style.less
+++ b/less/marketing-style.less
@@ -8,7 +8,13 @@ header {
     top: 0;
     width: 100%;
 
-
+    @media (max-width: 500px) {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height: 300px;
+        position: static;
+    }
     
     h1 {
         font-family: @font;
@@ -18,6 +24,9 @@ header {
         font-weight: bold;
         text-decoration: none;
 
+        @media (max-width: 500px) {
+            font-size: 3rem;
+        }
     }
 
 
@@ -27,6 +36,10 @@ header {
         justify-content: space-evenly;
         align-items: center;
 
+        @media (max-width: 500px) {
+            flex-direction: column;
+            width: 100%;
+        }
 
         a {
             color: black;
@@ -36,6 +49,10 @@ header {
             text-align: center;
             padding: 23px 0;
 
+            @media (max-width: 500px) {
+                width: 100%;
+                background-color: @ashgrey;
+            }
         }
 
         a:hover {
@@ -48,6 +65,10 @@ header {
 .main {
     margin-top: 65px;
 
+    @media (max-width: 500px) {
+        margin-top: 0;
+    }
+
 }
 
 // opener section 
@@ -56,6 +77,9 @@ header {
     display: flex;
     justify-content: space-around;
 
+    @media(max-width: 500px){
+        flex-flow: column;
+    }
 
     .headline {
         width: 30%;
@@ -63,6 +87,11 @@ header {
         flex-direction: column;
         justify-content: center;
         align-items: center;
+
+        @media (max-width: 500px) {
+            width: 90%;
+            margin: 0 auto;
+        }
 
         img {
             width: 30%;
@@ -79,6 +108,10 @@ header {
         p {
             font-family: @font;
             margin: 3% 0;
+
+            @media (max-width: 500px) {
+                text-align: center;
+            }
         }
 
         a {
@@ -104,6 +137,11 @@ header {
         margin-top: 20px;
         margin-bottom: 20px;
 
+        @media (max-width: 500px) {
+            margin: 0 auto;
+            width: 80%;
+        }
+
         img {
             width: 100%;
             border-radius: 10px;
@@ -118,6 +156,10 @@ header {
     align-items: center;
     justify-content: space-around;
     background-color: @ashgrey;
+
+    @media(max-width: 500px){
+        flex-direction: column;
+    }
 
     .gps-phone {
         width: 33%;
@@ -160,6 +202,10 @@ header {
     height: 400px;
     margin: 15px 0;
     justify-content: space-evenly;
+
+    @media(max-width: 500px){
+        flex-direction: column;
+    }
 
     .virtual-detail {
         width: 35%;
@@ -204,6 +250,10 @@ header {
     display: flex;
     justify-content: space-evenly;
     margin-bottom: 60px;
+
+    @media(max-width: 500px){
+        flex-direction: column;
+    }
 
     .lifestyle-img {
         width: 55%;
@@ -306,6 +356,10 @@ footer {
         font-size: 2rem;
         font-family: @font;
         color: black;
+
+        @media (max-width: 500px) {
+            font-size: 1.6rem;
+        }
     }
 
     a:hover {
